2002-10-17  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: set pending_para to FALSE
	call close_flow as well
	(parse_o): use finish_flow in <ol>
	(parse_u): use finish_flow in <ul>

2002-10-16  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (parse_b): use finish_flow instead of close_flow to
	avoid unwanted empty flows

2002-10-11  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (fix_last_clueflow): renamed from
	ensure_last_clueflow, discard last flow if empty
	(parse_u): close flow and add new empty one on </ul>
	(parse_o): as above for </ol>
	(parse_body): discard last flow if empty

2002-10-16  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: (parse_body): save & restore e->pending_para and
	e->avoid_para
	(parse_c): close flow only if non empty, otherwise just set its
	halign
	(parse_f): don't set pending para on <form>, just close flow if
	non empty
	(parse_table): don't add pending paragraph on end of cells
	(form_begin): new extracted function
	(form_end): ditto
	(parse_i): if form is NULL create new default form around to at
	least render it (as mozilla does)

2002-10-04  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_get_paragraph_indentation): new method,
	exports engine functionality

2002-10-04  Radek Doulik  <rodo@ximian.com>

	* htmlcluev.c (draw): fixed calculation of x,y for aligned objects
	drawing

2002-10-03  Radek Doulik  <rodo@ximian.com>

	* testgtkhtml.c (goto_url): set base before loading

2002-10-07  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_offset_for_pointer): fix for utf8, start on
	right beginning of slave (Larry)

	* htmltext.c (get_cursor_base): check for offset > slave->posStart
	(get_cursor_base): move to next text only if it doesn't start with
	' '
	(get_cursor): ditto

	* htmltable.c (html_table_end_table): return number of cells in
	table

	* htmlengine.c (parse_table): check if table has any cell after
	html_table_end_table

2002-10-01  Radek Doulik  <rodo@ximian.com>
